# anki

./: .gitignore  flake.nix  pyproject.toml
data/: oreg.txt  rest.txt
data/part_2/: dom_saker.txt  el-texto.txt  frases_de_cole.txt  imperfect-oreg.txt  nations_and_capitals.txt  past-tenses.txt  prepositioner.txt
data/part_3/: opinions.txt  something.txt  tiempo_libre.txt
data/rep_6_9/: all.txt  binde_ord.txt  clothes.txt  färger.txt  oreg-compact.txt  platser.txt
new_data/: extract-data.md  verb.md  verbs-presens.txt
src/: main.py  quizlet.txt
test/: first.txt
