[tool.poetry]
name = "sample-project"
version = "0.1.0"
description = ""
authors = ["upidapi <videw@icoud.com>"]
# readme = "README.md"
# license = "BSD"
packages = [
    # you prob want to change this to the name of the pkg
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
# add deps here
genanki = "^0.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
